examples/v0.7/errors/return_type_mismatch.nova
fn value() -> N {

    return "Hello"

}

print(value())